Converted documentAcronymsHaveElement to Selenium

--- a/test/assessmentSpecs/specs/documentAcronymsHaveElement/documentAcronymsHaveElement.html
+++ b/test/assessmentSpecs/specs/documentAcronymsHaveElement/documentAcronymsHaveElement.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 	<div data-expected="fail">
-		<p class="quail-failed-element">Everyone loves QUAIL.</p>
+		<p id="assert-1" class="quail-failed-element">Everyone loves QUAIL.</p>
 	</div>
 
 	<div data-expected="pass">
-		<p>Hi this is a document with no acronyms.</p>
+		<p id="assert-2">Hi this is a document with no acronyms.</p>
 	</div>
 
   </body>
