--- a/test/assessmentSpecs/specs/documentIDsMustBeUnique/documentIDsMustBeUnique.html
+++ b/test/assessmentSpecs/specs/documentIDsMustBeUnique/documentIDsMustBeUnique.html
@@ -5,28 +5,21 @@
 </head>
 <body>
 
-  <div data-expected="inapplicable"
- >
-    <p id="uniqueid">This paragraph has a unique</p>
+  <div data-expected="inapplicable">
+    <p id="assert-1" id="uniqueid">This paragraph has a unique</p>
   </div>
 
-  <div data-expected="inapplicable"
- >
-    <!-- No content -->
-  </div>
 
-  <div data-expected="h2:ignore|p:fail"
- >
-    <h2 id="one">This is a header.</h2>
-    <p id="one" class="quail-failed-element">
+  <div data-expected="h2:ignore|p:fail">
+    <h2 id="assert-2">This is a header.</h2>
+    <p id="assert-2">
       This is the second paragraph.
     </p>
   </div>
 
-  <div data-expected="h2:ignore|p:pass"
- >
+  <div data-expected="h2:ignore|p:pass">
     <h2 id="three">This is a header.</h2>
-    <p id="four">
+    <p id="assert-3" id="four">
       This is the second paragraph.
     </p>
   </div>
