Converted documentLangIsISO639Standard to Selenium

--- a/test/assessmentSpecs/specs/documentLangIsISO639Standard/documentLangIsISO639Standard-fail.html
+++ b/test/assessmentSpecs/specs/documentLangIsISO639Standard/documentLangIsISO639Standard-fail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="quail-test self-fail" data-expected="fail" data-accessibility-test="documentLangIsISO639Standard" lang="english">
+<html id="assert-1" class="quail-test self-fail" data-expected="fail" data-accessibility-test="documentLangIsISO639Standard" lang="english">
 
     <head>
         <title>documentLangIsISO639Standard-fail</title>
