--- a/test/assessmentSpecs/specs/documentLangIsISO639Standard/documentLangIsISO639Standard-inapplicable.html
+++ b/test/assessmentSpecs/specs/documentLangIsISO639Standard/documentLangIsISO639Standard-inapplicable.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-expected="inapplicable"
+<html id="assert-1" data-expected="inapplicable"
 data-accessibility-test="documentLangIsISO639Standard">
 
     <head>
