Converted documentStrictDocType to Selenium

--- a/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-fail.html
+++ b/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-fail.html
@@ -1,4 +1,4 @@
-<html class="quail-test self-fail" data-expected="fail" title="No doctype set">
+<html id="assert-1" class="quail-test self-fail" data-expected="fail" title="No doctype set">
 
 <head>
     <title>documentStrictDocType-fail</title>
@@ -6,7 +6,7 @@
 
 <body>
     <p>
-        <img src="../assets/rex.jpg" alt="A black and brown cat named Rex." />
+        <img src="assets/rex.jpg" alt="A black and brown cat named Rex." />
     </p>
     </body>
 </html>
