--- a/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-pass-2.html
+++ b/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-pass-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html class="quail-test self-fail" data-expected="pass">
+<html id="assert-1" class="quail-test self-fail" data-expected="pass">
 
 <head>
     <title>documentStrictDocType-pass-2</title>
@@ -7,7 +7,7 @@
 
 <body>
     <p>
-        <img src="../assets/rex.jpg" alt="A black and brown cat named Rex." />
+        <img src="assets/rex.jpg" alt="A black and brown cat named Rex." />
     </p>
     </body>
 </html>
