--- a/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType.html
+++ b/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html data-expected="pass">
+<html id="assert-1" data-expected="pass">
 
 <head>
     <title>documentStrictDocType-pass</title>
@@ -7,7 +7,7 @@
 
 <body>
     <p>
-        <img src="../assets/rex.jpg" alt="A black and brown cat named Rex." />
+        <img src="assets/rex.jpg" alt="A black and brown cat named Rex." />
     </p>
     </body>
 </html>
