--- a/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-fail-2.html
+++ b/test/assessmentSpecs/specs/documentStrictDocType/documentStrictDocType-fail-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html class="quail-test self-fail" data-expected="fail">
+<html id="assert-1" class="quail-test self-fail" data-expected="fail">
 
 <head>
     <title>documentStrictDocType-fail-2</title>
@@ -7,7 +7,7 @@
 
 <body>
     <p>
-        <img src="../assets/rex.jpg" alt="A black and brown cat named Rex." />
+        <img src="assets/rex.jpg" alt="A black and brown cat named Rex." />
     </p>
     </body>
 </html>
