Converted documentTitleIsShort to Selenium

--- a/test/assessmentSpecs/specs/documentTitleIsShort/documentTitleIsShort-fail.html
+++ b/test/assessmentSpecs/specs/documentTitleIsShort/documentTitleIsShort-fail.html
@@ -2,7 +2,7 @@
 <html data-expected="fail">
 
 <head>
-    <title class="quail-failed-element">This is a really really long title and maybe it should be shortened. In
+    <title id="assert-1" class="quail-failed-element">This is a really really long title and maybe it should be shortened. In
             fact I think it really should be shortened. Yes, let's all shorted the
             title so it's more manageable for everyone.</title>
 </head>
