--- a/test/assessmentSpecs/specs/documentTitleIsShort/documentTitleIsShort.html
+++ b/test/assessmentSpecs/specs/documentTitleIsShort/documentTitleIsShort.html
@@ -2,7 +2,7 @@
 <html data-expected="pass">
 
 <head>
-    <title>Test of documentTitleIsShort</title>
+    <title id="assert-1">Test of documentTitleIsShort</title>
 </head>
 
 <body>
