Converted headersUseToMarkSections to Selenium

--- a/test/assessmentSpecs/specs/headersUseToMarkSections/headersUseToMarkSections.html
+++ b/test/assessmentSpecs/specs/headersUseToMarkSections/headersUseToMarkSections.html
@@ -6,7 +6,7 @@
 <body>
     <div data-expected="fail">
 
-        <p class="quail-failed-element"> <strong>Applicability</strong></p>
+        <p id="assert-1"> <strong>Applicability</strong></p>
             HTML and XHTML
             <br/> <strong>This technique is referenced from:</strong>
             <br/>
@@ -37,7 +37,7 @@
 
     <div data-expected="fail">
       <div class="navigation">
-        <ul class="quail-failed-element">
+        <ul id="assert-3">
           <li><a href="1.html">Item 1</a></li>
           <li><a href="2.html">Item 2</a></li>
           <li><a href="3.html">Item 3</a></li>
@@ -49,7 +49,7 @@
 
     <div data-expected="fail">
       <div class="navigation">
-        <ul class="quail-failed-element">
+        <ul id="assert-4">
           <li><a href="1.html">Item 1</a></li>
           <li><a href="2.html">Item 2</a></li>
           <li><a href="3.html">Item 3</a></li>
@@ -64,7 +64,7 @@
     <div data-expected="pass">
       <div class="navigation">
         <h2>Navigation</h2>
-        <ul>
+        <ul id="assert-5">
           <li><a href="1.html">Item 1</a></li>
           <li><a href="2.html">Item 2</a></li>
           <li><a href="3.html">Item 3</a></li>
@@ -78,7 +78,7 @@
 
         <h2>User Agent and Assistive Technology Support Notes</h2>
 
-        <p>
+        <p id="assert-2">
             Home
             <strong>Page Reader, JAWS, and WindowEyes</strong>
             all provide navigation
