Converted inputImageAltIsNotFileName to Selenium

--- a/test/assessmentSpecs/specs/inputImageAltIsNotFileName/inputImageAltIsNotFileName.html
+++ b/test/assessmentSpecs/specs/inputImageAltIsNotFileName/inputImageAltIsNotFileName.html
@@ -6,19 +6,19 @@
 <body>
 	<div data-expected="fail">
 		<form>
-			<label for="name">Name</label>:
+			<label for="assert-1">Name</label>:
 			<br/>
 			<br/>
-			<input type="image" name="name" id="name" src="../assets/name.jpg" alt="../assets/name.jpg" class="quail-failed-element"/>
+			<input type="image" name="name" id="assert-1" src="assets/name.jpg" alt="assets/name.jpg" class="quail-failed-element"/>
 		</form>
 	</div>
 
 	<div data-expected="pass">
 		<form>
-			<label for="name">Name</label>:
+			<label for="assert-2">Name</label>:
 			<br/>
 			<br/>
-			<input type="image" name="name" id="name" src="../assets/input.jpg" alt="input name">
+			<input type="image" name="name" id="assert-2" src="assets/input.jpg" alt="input name">
 		</form>
 	</div>
 
