Converted inputImageAltIsShort to Selenium

--- a/test/assessmentSpecs/specs/inputImageAltIsShort/inputImageAltIsShort.html
+++ b/test/assessmentSpecs/specs/inputImageAltIsShort/inputImageAltIsShort.html
@@ -6,19 +6,19 @@
 <body>
 	<div data-expected="fail">
 		<form>
-			<label for="name">Name</label>:
+			<label for="assert-1">Name</label>:
 			<br/>
 			<br/>
-			<input type="image" name="name" id="name" class="quail-failed-element" src="../assets/name.jpg" alt="This is some very long alt text for the contro's image. Your alt text should not be this long. Shorten the text to make it more accessible and more pleasant for all."></form>
+			<input type="image" name="name" id="assert-1" class="quail-failed-element" src="assets/name.jpg" alt="This is some very long alt text for the contro's image. Your alt text should not be this long. Shorten the text to make it more accessible and more pleasant for all."></form>
 	</div>
 
 	<div data-expected="pass">
 		<form>
-			<label for="name">Name</label>
+			<label for="assert-2">Name</label>
 			:
 			<br/>
 			<br/>
-			<input type="image" name="name" id="name" src="../assets/input.jpg" alt="name"></form>
+			<input type="image" name="name" id="assert-2" src="assets/input.jpg" alt="name"></form>
 	</div>
 
   </body>
