--- a/test/assessmentSpecs/specs/KINGStrongList/KINGStrongList.html
+++ b/test/assessmentSpecs/specs/KINGStrongList/KINGStrongList.html
@@ -6,12 +6,12 @@
 <body>
 <div data-expected="pass">
   <ul>
-    <li>Some <strong>bold</strong> text.</li>
+    <li>Some <strong id="assert-1">bold</strong> text.</li>
   </ul>
 </div>
 
 <div data-expected="fail">
-  <p><strong>Bold</strong> at the wrong place.</p>
+  <p><strong id="assert-2">Bold</strong> at the wrong place.</p>
 </div>
 
   </body>
