Converted KINGUseCurrencyAsSymbol to Selenium

--- a/test/assessmentSpecs/specs/KINGUseCurrencyAsSymbol/KINGUseCurrencyAsSymbol.html
+++ b/test/assessmentSpecs/specs/KINGUseCurrencyAsSymbol/KINGUseCurrencyAsSymbol.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <div data-expected="fail">
-  <p>Text with a few prices, 500 dollars, 500 euros. Dollars 500</p>
+  <p id="assert-1">Text with a few prices, 500 dollars, 500 euros. Dollars 500</p>
 </div>
 
 <div data-expected="pass">
-  <p>Text with a few prices, 500 USD, 300€.</p>
+  <p id="assert-2">Text with a few prices, 500 USD, 300€.</p>
 </div>
 
   </body>
