Converted KINGUsePercentageWithSymbol to Selenium

--- a/test/assessmentSpecs/specs/KINGUsePercentageWithSymbol/KINGUsePercentageWithSymbol.html
+++ b/test/assessmentSpecs/specs/KINGUsePercentageWithSymbol/KINGUsePercentageWithSymbol.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <div data-expected="fail">
-  <p>Text with a few percentages, 50 pct., 500 percent.</p>
+  <p id="assert-1">Text with a few percentages, 50 pct., 500 percent.</p>
 </div>
 
 <div data-expected="pass">
-  <p>Text with a few percentages: 50%, 50.30%.</p>
+  <p id="assert-2">Text with a few percentages: 50%, 50.30%.</p>
 </div>
 
   </body>
